# Kinetics-i3d-for-modern-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: MIGRATION.md  RELEASE.md
docs/releases/: v0.1.0-beta.1.md
examples/: minimal_api.py
scripts/: convert_tf_ckpt.py  demo_infer.py  prepare_release.py
src/kinetics_i3d/: __init__.py  api.py
src/kinetics_i3d/cli/: __init__.py  convert_tf_ckpt.py  demo_infer.py  prepare_release.py
src/kinetics_i3d/models/: __init__.py  inception_i3d.py  legacy.py
src/kinetics_i3d/release/: __init__.py  prepare.py
src/kinetics_i3d/weights/: __init__.py  checkpoints.py  tf_convert.py
tests/: README.md  __init__.py  conftest.py  test_checkpoint_compat.py  test_cli_smoke.py  test_integration_api.py  test_padding_and_forward.py  test_parity_with_reference.py  test_release_prepare.py  test_tf_converter_optional.py
